[gd_scene load_steps=10 format=2]

[ext_resource path="res://sources/level/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/Tires.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/Tools.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/GasCan.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/LevelWifeHouse.gd" type="Script" id=6]
[ext_resource path="res://sources/ui/dialog/Dialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://sources/ui/dialog/DialogLine.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 259.24, 6.46997 )

[node name="LevelWifeHouse" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="." index="0"]

[node name="Player" parent="." index="1"]
position = Vector2( 43.088, 52.9392 )

[node name="Introduction" parent="UI" index="0" instance=ExtResource( 7 )]

[node name="DialogLine" parent="UI/Introduction" index="1" instance=ExtResource( 8 )]
content = "Great, Brittany's there, let's take her and Billy to safety"
who = "Jonhy"
thinking = true

[node name="BritanyPanic" parent="UI" index="1" instance=ExtResource( 7 )]

[node name="Britany" parent="UI/BritanyPanic" index="1" instance=ExtResource( 8 )]
content = "Oh Jonhy! Thank's god you are there, the ceiling collapsed and Bily got stuck under it while trying to save me! Please rescue him"
who = "Britany"

[node name="BilyStuck" parent="UI" index="2" instance=ExtResource( 7 )]

[node name="Bily" parent="UI/BilyStuck" index="1" instance=ExtResource( 8 )]
content = "Dad! I got stuck saving mommy. Please help me! There's a crowbar in the garage you can use to move that beam blocking my leg"
who = "Bily"

[node name="GotCrowbar" parent="UI" index="3" instance=ExtResource( 7 )]

[node name="Think" parent="UI/GotCrowbar" index="1" instance=ExtResource( 8 )]
content = "Here it is, let's help Bily now..."
who = "Jonhy"
thinking = true

[node name="BilySaved" parent="UI" index="4" instance=ExtResource( 7 )]

[node name="Bily" parent="UI/BilySaved" index="1" instance=ExtResource( 8 )]
content = "Thanks dad! Let's leave this place now, the car is in the garage but we'll need new tires and gas to drive to the shelter"
who = "Bily"

[node name="GotTires" parent="UI" index="5" instance=ExtResource( 7 )]

[node name="Think" parent="UI/GotTires" index="1" instance=ExtResource( 8 )]
content = "Those tires are looking good, they should do for the travel..."
who = "Jonhy"
thinking = true

[node name="GotGas" parent="UI" index="6" instance=ExtResource( 7 )]

[node name="Think" parent="UI/GotGas" index="1" instance=ExtResource( 8 )]
content = "This gas can is full, that's perfect..."
who = "Jonhy"
thinking = true

[node name="EverythingReady" parent="UI" index="7" instance=ExtResource( 7 )]

[node name="Think" parent="UI/EverythingReady" index="1" instance=ExtResource( 8 )]
content = "Ok, let's get in the car now..."
who = "Jonhy"
thinking = true

[node name="Floor" type="CollisionShape2D" parent="Limits" index="0"]
position = Vector2( 0, 73.4421 )
shape = SubResource( 1 )

[node name="Car" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 217.991, 53.1566 )

[node name="GasCan" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 182.789, 55.7215 )

[node name="Tires" parent="." index="6" instance=ExtResource( 2 )]
position = Vector2( 253.502, 55.2338 )

[node name="Tools" parent="." index="7" instance=ExtResource( 3 )]
position = Vector2( 182.302, 11.3431 )
